# mini-chat

./: .gitignore
mini-chat-backend/: pyproject.toml
mini-chat-backend/mini_chat_backend/: main.py
mini-chat-frontend/: package.json
