[tool.poetry]
name = "mini-chat-backend"
version = "0.1.0"
description = ""
authors = ["YHCM <a2646399721@163.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
